src/styles/index.scss
@use './reset.scss';
@use './theme.scss';

// Page stuff
#page-container {
  position: relative;
  min-height: 100vh;
}

#content-wrap {
  padding-bottom: 2.5rem;    /* Footer height */
}

.page-text {
    font-size: 15px;
}

.page-text-center {
    font-size: 15px;
    text-align: center;
}

//  Header
.header {
    padding: 8px;
    background-color: theme.color('primary', 'base');
    color: theme.color('scale', 'light');
    z-index: 3; /* Stay on top */
    position: relative;
}


.header h1 a {
    padding: 6px;
    background-color: theme.color('primary', 'base');
    color: theme.color('scale', 'light');
}

.header a:hover { color:theme.color('scale', 'light') };

.header a:link {text-decoration:none;}
.header a:visited {text-decoration:none;}
.header a:hover {text-decoration:none;}
.header a:active {text-decoration:none;}

.bar{
  width: 35px;
  height: 5px;
  background-color: white;
  margin: 6px 0;
  transition: 0.4s;
}

// Footer
#footer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2.5rem;            /* Footer height */
  padding: 8px;
  background-color: theme.color('primary', 'base');
  color: theme.color('scale', 'light');
  text-align: center;
  z-index: 3;
}

.footer-url {
   background-color: theme.color('primary', 'base');
   color: theme.color('scale', 'light');
}

// Search
.content {
    .searcher {
        padding: 8px;
        background-color: theme.color('primary', 'light');

        > * {
            margin-right: 8px;
        }
    }

    .results {
        padding: 8px;
    }

    .selector {
        padding-left: 4px;
        padding-bottom: 8px;
        background-color: theme.color('primary', 'light');
        color: theme.color('scale', 'light');
    }

}

// MEDIA
.media-card {
    @include theme.text-setting('sm');
    display: flex;
//     border: 1px solid theme.color('primary', 'light');
    padding: 8px;
    height: 120px;

    .media-image {
        width: 60px;
    }

    .media-info {
        display: flex;
        flex-direction: column;
        padding-left: 8px;
    }

    .media-buttons {
        display: flex;
        flex-direction: row;
        margin-top: 6px;
        font-weight: bold;
    }

    .media-status {
        display: flex;
        flex-direction: row;
        color: theme.color('primary', 'base');
        top: 4px;
        font-weight: bold;
        margin-right: 10px;
    }

    .media-existing-status-not-btn {
      display: absolute;
      background-color: theme.color('scale', 'light');
      color: theme.color('primary', 'base');
      font-weight: bold;
      padding: 5px;
      border: 1px solid theme.color('primary', 'base');
    }

    .friend-media-existing-status-not-btn {
      background-color: theme.color('scale', 'light');
      color: theme.color('accent', 'base');
      font-weight: bold;
      padding: 5px;
      border: 1px solid theme.color('accent', 'base');
    }
}

.media-card-long {
    height: 130px;
}

// Users

.user-card {
    @include theme.text-setting('sm');
    display: flex;
    border: 1px solid theme.color('accent', 'light');
    padding: 8px;
    height: 60px;
}

.user-info {
        display: flex;
        flex-direction: column;
        padding-left: 8px;
    }

.user-info a {
  color: black;
  text-decoration: none;
  display: block;
  font-weight: bold;
}


.user-button-wrapper {
    margin-left: 20px;
    position:relative;
    height:100%;
}

.user-button {
    transform: translateY(+25%);
    background-color: theme.color('accent', 'base');
    color: white;
    padding: 6px;
    border: none;
    cursor: pointer;
}


.user-button:hover {
    background-color: theme.color('accent', 'dark');
}

.user-status {
    transform: translateY(+50%);
    display: flex;
    flex-direction: row;
    color: theme.color('accent', 'base');
    font-weight: bold;
    border: none;
}


// Dropdown

.dropbtn {
  background-color: theme.color('primary', 'base');
  color: white;
  padding: 6px;
  border: none;
  cursor: pointer;
}

.dropbtn-existing-status {
  background-color: theme.color('scale', 'light');
  color: theme.color('primary', 'base');
  font-weight: bold;
  padding: 5px;
  border: 1px solid theme.color('primary', 'base');
  cursor: pointer;
}

.dropbtn-check {
  color: theme.color('primary', 'base');
  font-weight: bold;
  display: inline-block;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
  color: theme.color('primary', 'base');
  font-weight: bold
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: relative;
  background-color: #f9f9f9;
  min-width: 100px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content p {
  color: black;
  padding: 8px 8px;
  text-decoration: none;
  display: block;
}

.dropdown-content a {
  color: black;
  padding: 8px 8px;
  text-decoration: none;
  display: block;
  font-weight: normal;
}


/* Change color of dropdown links on hover */
.dropdown-content p:hover {background-color: #f1f1f1}
.dropdown-content a:hover {background-color: #f1f1f1}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
  display: block;
  cursor: pointer;
}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropbtn {
  background-color: theme.color('primary', 'light');
}

.dropdown:hover .dropbtn-existing-status {
  background-color: theme.color('primary', 'light');
}

// User
#user-profile {
    padding: 8px;
    background-color: theme.color('primary', 'light');
    color: theme.color('scale', 'light');
}

// Tabs
/* Style the tab */
.tab {
  overflow: hidden;
  border: 1px solid #ccc;
  background-color: #f1f1f1;
}

/* Style the buttons that are used to open the tab content */
.tab button {
  background-color: inherit;
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 8px 10px;
  transition: 0.3s;
  font-family: sans-serif;
  font-size: 13px;
}

/* Change background color of buttons on hover */
.tab button:hover {
  background-color: #ddd;
}

/* Create an active/current tablink class */
.tab button.active {
  background-color: #ccc;
}

// SIDEBAR
.sidenav {
  height: 100%; /* Full-height: remove this if you want "auto" height */
  width: 145px; /* Set the width of the sidebar */
  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  right: 0;
  overflow-x: hidden; /* Disable horizontal scroll */
  background: theme.color('primary', 'light');
  border-left: 3px solid #f1f1f1;
  text-align: right;
  padding-top: 80px;
  padding-right: 15px;
  font-size: 15px;
}

/* The navigation menu links */
.sidenav a {
  padding: 6px 8px 6px 16px;
  text-decoration: none;
  color: white;
  display: block;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: theme.color('scale', 'mid');
}

/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

.hamburger {
  position: absolute;
  right: 0;
  margin-top: 10px;
  padding-right: 57px;
  cursor: pointer;

}
.bar {
  width: 30px;
  height: 5px;
  background-color: white;
  margin: 6px 0;
  transition: 0.4s;
}

// About page
.about-box {
  background-color: theme.color('primary', 'really-light');
  text-align: justify;
  padding: 2%;
  margin-top: 7%;
  margin-right: 25%;
  margin-left: 25%;
}

.about-box a {
    color: theme.color('scale', 'dark');
}

.about-box h1 {
    padding: 6px;
    color: theme.color('scale', 'light');
    text-align: center;
    padding-bottom: 15px;
}

.about-box h1 a {
    color: theme.color('scale', 'light');
    text-align: center;
}

.about-box h2 {
    margin: 8px;
    text-align: center;
}

.about-box a:hover { color:theme.color('scale', 'light') };
.about-box a:link {text-decoration:none;}

